started service and application layer
