# api_doc.yml
@@ -550,6 +550,7 @@ components:
       - lastName
       - mail
       - isConfirmed
+      - expirationDate
       properties:
         id:
           type: integer
@@ -561,6 +562,8 @@ components:
           type: string
         isConfirmed:
           type: boolean
+        expirationDate:
+          type: string
     
     ShopAddOrChange:
       type: object
@@ -618,6 +621,7 @@ components:
       - address
       - latitude
       - longitude
+      - phoneNumber
       properties:
         id:
           type: integer
@@ -635,6 +639,8 @@ components:
           type: number
         longitude:
           type: number
+        phoneNumber:
+          type: string
           
     UserException:
       properties:
